hacking.html respects global theming closes #8

--- a/pages/hacking.html
+++ b/pages/hacking.html
@@ -2,24 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link rel="stylesheet" type="text/css" href="../styles/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <title>Computing</title>
-    <style>
-      body { 
-      background-color: #8FD2E9; 
-      }
-    </style>
   </head>
 
 <body>
-<div class="jumbotron text-center">
-  <h1>Best Application of Computing</h1>
-  <p>In Society!</p>
-  <p>Yes, there are a millions applications that can be found cause come on we live in the 21st century..but the best??.. Here's what I think ;)</p>
+<div class="jumbotron text-center main-header">
+  <h1 class = "main-title">Best Application of Computing</h1>
+  <p class = "main-title">In Society!</p>
+  <p class = "main-title">Yes, there are a millions applications that can be found cause come on we live in the 21st century..but the best??.. Here's what I think ;)</p>
 </div>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark main-nav sticky-top">
     <div class="container">
@@ -34,7 +31,10 @@
     </div>
 </nav>
 
-<center><h3><bold>White Hat Hacking</bold></h3></center>
+<div class = "container text-center">
+  <h1>White Hat Hacking</h1>
+</div>
+
       
 </body>
 </html>
