Implemented footer using fontawesome icons for extra visual appeal

--- a/pages/encryption.html
+++ b/pages/encryption.html
@@ -10,6 +10,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+        <script src="https://kit.fontawesome.com/64ed94bc51.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="jumbotron text-center main-header">
@@ -66,5 +67,14 @@
                 </div>
             </div>
         </div>
+        <nav class = "navbar navbar-expand-lg bottom navbar-light">
+            <div class = "navbar text col-11">
+                This page was authored by Nikhil Woodruff, a first year computer science student at Durham University.
+            </div>
+            <div class = "navbar text-right col float-right" style = "font-size: 200%;">
+                <a href="https://github.com/nwoodruff149"><i class = "fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/nikhil-woodruff-759885167"><i class = "fab fa-linkedin"></i></a>
+            </div>
+        </nav>
     </body>
 </html>
