Add footer in web

--- a/pages/encryption.html
+++ b/pages/encryption.html
@@ -72,7 +72,7 @@
                 This page was authored by Nikhil Woodruff, a first year computer science student at Durham University.
             </div>
             <div class = "navbar text-right col float-right" style = "font-size: 200%;">
-                <a href="https://github.com/nwoodruff149"><i class = "fab fa-github"></i></a>
+                <a href="https://github.com/nikhilwoodruff"><i class = "fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/nikhil-woodruff-759885167"><i class = "fab fa-linkedin"></i></a>
             </div>
         </nav>
