--- a/pages/web.html
+++ b/pages/web.html
@@ -79,6 +79,14 @@
             <p>The Web's revolutionary tide really started to take hold in the early 2000s, when "Web 2.0" entered the scene. Despite the name, Web 2.0 was not a new version of the Web, or even a discrete step (it was far more gradual). Instead, the term refers to the growing interactivity of the web that emerged during the turn of the millenium. This finally achieved Berners-Lee's original goal of a user-driven Web, with more and more content being authored by the users of websites.</p>
             <p>As a result of Web 2.0, the various e-commerce sites such as eBay and Amazon become viable and exploded, along with early social media sites such as MySpace and Friendster. The now-ubiquitous Facebook would emerge a couple of years later. By focusing around the user, these websites paved the way for our modern relationship with the web, where many of us share virtually aspect of our lives with a faceless crowd of followers and Facebook friends. However, these same advancements enable governments to spy on their citizens and companies to sell our data for profit - such is the double-edged sword of technological advancement. For better or for worse, the Web has changed the world.</p>
         </div>
-
+        <nav class = "navbar navbar-expand-lg bottom navbar-light">
+            <div class = "navbar text col-11">
+                This page was authored by James Townsend, a first year computer science student at Durham University.
+            </div>
+            <div class = "navbar text-right col float-right" style = "font-size: 200%;">
+                <a href="https://github.com/muppet2011ad"><i class = "fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/james-townsend-54a48a195/"><i class = "fab fa-linkedin"></i></a>
+            </div>
+        </nav>
     </body>
 </html>
