About the author sect

--- a/pages/hacking.html
+++ b/pages/hacking.html
@@ -109,7 +109,15 @@
       <p>
 	To face reality, it is almost impossible to design an inpenetrable system because technology itself has built-in security flaws. Although, there still is a lot of work that has to be done, this makes ethical hackers extremely helpful in keeping the Internet safe and information-private. 
     </div>
-
+    <nav class = "navbar navbar-expand-lg bottom navbar-light">
+      <div class = "navbar text col-11">
+          This page was authored by Andrea Biju, a first year computer science student at Durham University.
+      </div>
+      <div class = "navbar text-right col float-right" style = "font-size: 200%;">
+          <a href="https://github.com/a000-b"><i class = "fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/"><i class = "fab fa-linkedin"></i></a>
+      </div>
+  </nav>
   </body>
 </html>
  
