--- a/pages/hacking.html
+++ b/pages/hacking.html
@@ -21,15 +21,19 @@
       <p class="main-title">~the ethical hat of hacking~</p>
     </div>
 
-    <div class="navbar-nav">
-      <a class="nav-item nav-link" href="../index.html">Home</a>
-      <a class="nav-item nav-link active" href="#">Encryption</a>
-      <a class="nav-item nav-link" href="hacking.html">Hacking</a>
-      <a class="nav-item nav-link" href="iot.html">IoT</a>
-      <a class="nav-item nav-link" href="web.html">Web</a>
-      <a class="nav-item nav-link" href="https://github.com/nwoodruff149/CompSciApplications">Site Repo</a>
-    </div> 
-   
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark main-nav sticky-top">
+      <div class="container">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="../index.html">Home</a>
+          <a class="nav-item nav-link active" href="#">Encryption</a>
+          <a class="nav-item nav-link" href="hacking.html">Hacking</a>
+          <a class="nav-item nav-link" href="iot.html">IoT</a>
+          <a class="nav-item nav-link" href="web.html">Web</a>
+          <a class="nav-item nav-link" href="https://github.com/nwoodruff149/CompSciApplications">Site Repo</a>
+        </div>
+      </div>
+    </nav>
+  
     <div class="container">
       <h1>A Bit About the other 'Hats'</h1>
       <p>
