--- a/pages/iot.html
+++ b/pages/iot.html
@@ -83,15 +83,14 @@
                     <br><br>
                 </div>
                 
-                <nav class="navbar navbar-expand-lg bottom navbar-light">
-                    <div class="navbar text col-11">
-                        This page was authored by Matthew Fox, a first year computer science student at Durham University.
-                    </div>
-                    <div class="navbar text-right col float-right" style="font-size: 200%;">
-                        <a href="https://github.com/foxy8090"><i class="fab fa-github" aria-hidden="true"></i></a>
-                        <a href="https://www.linkedin.com/in/metthew-fox-27529b172"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
-                    </div>
-               </nav>
+                <nav class = "navbar navbar-expand-lg bottom navbar-light">
+      <div class = "navbar text col-11">
+        This page was authored by Matthew Fox, a first year computer science student at Durham University.
+      </div>
+      <div class = "navbar text-right col float-right" style = "font-size: 200%;">
+        <a href="https://github.com/foxy8090"><i class = "fab fa-github"></i></a>
+      </div>
+    </nav>
                 
             </div>
             </div>
