Made header active

--- a/pages/hacking.html
+++ b/pages/hacking.html
@@ -23,8 +23,8 @@
       <div class="container">
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="../index.html">Home</a>
-          <a class="nav-item nav-link active" href="#">Encryption</a>
-          <a class="nav-item nav-link" href="hacking.html">Hacking</a>
+          <a class="nav-item nav-link" href="encryption.html">Encryption</a>
+          <a class="nav-item nav-link active" href="#">Hacking</a>
           <a class="nav-item nav-link" href="iot.html">IoT</a>
           <a class="nav-item nav-link" href="web.html">Web</a>
           <a class="nav-item nav-link" href="https://github.com/nwoodruff149/CompSciApplications">Site Repo</a>
@@ -111,14 +111,16 @@
       <p>
 	To face reality, it is almost impossible to design an inpenetrable system because technology itself has built-in security flaws. Although, there still is a lot of work that has to be done, this makes ethical hackers extremely helpful in keeping the Internet safe and information-private. 
     </div>
+
     <nav class = "navbar navbar-expand-lg bottom navbar-light">
       <div class = "navbar text col-11">
-          This page was authored by Andrea Biju, a first year computer science student at Durham University.
+        This page was authored by Andrea Biju, a first year computer science student at Durham University.
       </div>
       <div class = "navbar text-right col float-right" style = "font-size: 200%;">
-          <a href="https://github.com/a000-b"><i class = "fab fa-github"></i></a>
+        <a href="https://github.com/a000-b"><i class = "fab fa-github"></i></a>
       </div>
-  </nav>
+    </nav>
+    
   </body>
 </html>
  
