--- a/pages/iot.html
+++ b/pages/iot.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html> 
+<html>  
     <head>
         <title>Internet of Things</title>
         <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
@@ -85,6 +85,8 @@
                 </div>
                 </div>
             </div>
+        </div>
+        
                <nav class="navbar navbar-expand-lg navbar-dark bg-dark main-nav">
             <div class="navbar text col-11">
                 This page was authored by Matthew Fox, a first year computer science student at Durham University.
