--- a/pages/iot.html
+++ b/pages/iot.html
@@ -86,7 +86,8 @@
                 </div>
             </div>
         </div>
-        
+        </div>
+    
                <nav class="navbar navbar-expand-lg navbar-dark bg-dark main-nav">
             <div class="navbar text col-11">
                 This page was authored by Matthew Fox, a first year computer science student at Durham University.
