--- a/pages/iot.html
+++ b/pages/iot.html
@@ -85,18 +85,13 @@
                 </div>
                 </div>
     
-               <nav class="navbar navbar-expand-lg navbar-dark bg-dark main-nav">
-            <div class="navbar text col-11">
-                This page was authored by Matthew Fox, a first year computer science student at Durham University.
-            </div>
-            <div class="navbar text-right col float-right" style="font-size: 200%;">
-                <a href="https://github.com/foxy8090">
-                    <i class="fab fa-github" aria-hidden="true"></i></a>
-                <a href="https://www.linkedin.com/in/matthew-fox-27529b172">
-                    <i class="fab fa-linkedin" aria-hidden="true"></i></a>
-            </div>
-        </nav>  
-          
->>>>>>> 956e708a5e0dcf9b36643c89c23c7fdc3026922a
+               <nav class="navbar navbar-expand-lg bottom navbar-light">
+      <div class="navbar text col-11">
+        This page was authored by Andrea Biju, a first year computer science student at Durham University.
+      </div>
+      <div class="navbar text-right col float-right" style="font-size: 200%;">
+        <a href="https://github.com/a000-b"><i class="fab fa-github" aria-hidden="true"></i></a>
+      </div>
+    </nav>
     </body>
 </html>
