--- a/pages/iot.html
+++ b/pages/iot.html
@@ -87,7 +87,7 @@
     
                <nav class="navbar navbar-expand-lg bottom navbar-light">
       <div class="navbar text col-11">
-        This page was authored by Andrea Biju, a first year computer science student at Durham University.
+        This page was authored by Matthew Fox, a first year computer science student at Durham University.
       </div>
       <div class="navbar text-right col float-right" style="font-size: 200%;">
         <a href="https://github.com/a000-b"><i class="fab fa-github" aria-hidden="true"></i></a>
