--- a/pages/hacking.html
+++ b/pages/hacking.html
@@ -61,7 +61,7 @@
 
     <div class="container text-center">
       <figure class="figure">
-        <img src="https://www.google.co.in/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=2ahUKEwjy3r6itePlAhURhxoKHZ8JBk8QjRx6BAgBEAQ&url=https%3A%2F%2Fhealthitsecurity.com%2Fnews%2F32m-patient-records-breached-in-first-half-of-2019-88-caused-by-hacking&psig=AOvVaw23qZX7pzjnYgOjVmBOVgOs&ust=1573604908992403" class="resize" width="400" height="240">
+        <img src="https://healthitsecurity.com/images/site/article_headers/_normal/2017-03-29-ransomware-attack.png" class="resize" width="400" height="240">
         <figcaption class="figure-caption" style="color:white;"><b>Fig. 1</b></figcaption>
       </figure>
     </div>
