--- a/pages/iot.html
+++ b/pages/iot.html
@@ -98,7 +98,7 @@
             This page was authored by Matthew Fox, a first year computer science student at Durham University.
       </div>
       <div class="navbar text-right col float-right" style="font-size: 200%;">
-        <a href="https://github.com/a000-b"><i class="fab fa-github" aria-hidden="true"></i></a>
+        <a href="https://github.com/a000-b"><i class="fa fa-github" aria-hidden="true"></i></a>
 	<a href="https://www.linkedin.com/in/nikhil-woodruff-759885167"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
       </div>
     </nav>
