Changed font color

--- a/pages/hacking.html
+++ b/pages/hacking.html
@@ -43,7 +43,7 @@
 	<br>These type of hackers generally have mixed skills and motives of both Black and White hackers. Grey Hat Hacking is mainly not aimed at anything but personal enjoyment. 
       </p>
       <p>
-	<b style="color:blue;"> Blue Hat: </b>Just pure revenge
+	<b style="color:#06B0F5;"> Blue Hat: </b>Just pure revenge
 	<br>Blue Hat hackers often take existing code for malware and viruses they find online, then modify it to meet their needs. They will use this code to target the business or individual they feel has wronged them and inflict their revenge.
       </p>
       <p>
