--- a/pages/hacking.html
+++ b/pages/hacking.html
@@ -51,7 +51,7 @@
 	<br>Bringing justice and putting a stop to Black Hat hackers is what they do. They take the hacker's own arsenal and turn it back against them. Basically a less popularly known White Hat hacker.
       </p>
       <p>
-	The last and final<b style="color:green;"> Green Hat: </b>Taking baby steps into the world of hacking
+	The last and final<b style="color:#06F518;"> Green Hat: </b>Taking baby steps into the world of hacking
 	<br>These are people who are just new to the world of scripting, coding and hacking in general. It's all about learning to be full blow hackers.
       </p>
       <p>
