fixed broken link

--- a/pages/hacking.html
+++ b/pages/hacking.html
@@ -118,6 +118,7 @@
       </div>
       <div class = "navbar text-right col float-right" style = "font-size: 200%;">
         <a href="https://github.com/a000-b"><i class = "fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/andrea-biju-88a522197?fbclid=IwAR0ADLReLJwMxRpkxKrsyaKxIlaAJUXaaTm6Hv459vmGukOBatwybxw8Qhc"><i class = "fab fa-linkedin"></i></a>
       </div>
     </nav>
     
