fixed broken stylesheet

--- a/pages/iot.html
+++ b/pages/iot.html
@@ -10,6 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/64ed94bc51.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -98,8 +99,8 @@
         This page was authored by Matthew Fox, a first year computer science student at Durham University.
       </div>
       <div class="navbar text-right col float-right" style="font-size: 200%;">
-        <a href="https://github.com/foxy8090"><i class="fab fa-github" aria-hidden="true"></i></a>
-        <a href="https://www.linkedin.com/in/matthew-fox-27529b172"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+        <a href="https://github.com/foxy8090"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/matthew-fox-27529b172"><i class="fab fa-linkedin"></i></a>
       </div>
     </nav>
 
