Added my comments and review for a very well built site!

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <p>The first page on this site is about encryption, one of the technologies that the modern world depends on. Without it, there would be no internet banking, no private messaging and no privacy of any form whilst online. Following this, there is a page on hacking, in particular white hat hacking. Tying into encryption, cyber security is a field which all Internet users depend upon. Another development with incredibly promising potential is the Internet of Things. Quite a new term, the IoT is something you have probably used already without realising. Finally, we have a page about the World Wide Web, something which has defined the 21st Century and enables the page you are currently reading.</p>
                     <p>We hope you <s>give us high marks</s> enjoy the site!</p>
                 </div>
+                <!-- I like the use of a container to position image on the right -->
                 <div class="col-4 text-center">
                         <h1>Meet the team</h1>
                     <image src="images/team.jpeg" style="width: 100%;"></image>
