--- a/pages/hacking.html
+++ b/pages/hacking.html
@@ -32,6 +32,7 @@
       </div>
     </nav>
   
+    <!-- Maybe more padding around here? Good page. -->
     <div class="container">
       <h1>A Bit About the other 'Hats'</h1>
       <p>
@@ -79,6 +80,7 @@
       <p>
 	Coming to the usage of the term 'Hats', it comes from Western films, where heroic and antagonistic cowboys might traditionally wear a white and a black hat respectively.
       </p>
+      <!-- Nice use of columns of text -->
       <div class="row">
 	<div class="col">
 	  <p>
@@ -112,6 +114,8 @@
 	To face reality, it is almost impossible to design an inpenetrable system because technology itself has built-in security flaws. Although, there still is a lot of work that has to be done, this makes ethical hackers extremely helpful in keeping the Internet safe and information-private. 
     </div>
 
+
+    <!-- Cool use of navbar to act as a footer. -->
     <nav class = "navbar navbar-expand-lg bottom navbar-light">
       <div class = "navbar text col-11">
         This page was authored by Andrea Biju, a first year computer science student at Durham University.
