--- a/pages/iot.html
+++ b/pages/iot.html
@@ -36,6 +36,7 @@
     <div class="container text-center">
       <div class="row">
   
+        <!-- very nice use of columns to align text across the page -->
 	<div class="col align-left">
           <br>
           <h2>What is the Internet of Things?</h2>
