--- a/pages/web.html
+++ b/pages/web.html
@@ -31,10 +31,13 @@
             </div>
         </nav>
 
+        <!-- Good page! -->
+
         <div class = "container">
             <div class = "row">
                 <div class = "col-8">
                     <h1>Could you Live Without it?</h1>
+                    <!-- Probably not -->
                 </div>
             </div>
             <div class = "row">
