Add captions to images on IoT

--- a/pages/iot.html
+++ b/pages/iot.html
@@ -46,12 +46,14 @@
         <div class="col">
           <br>
           <img src="../images/iot-img1.png" height=360px width=388px />
+          <figcaption>Flow of data in the Internet of Things</figcaption>
         </div>
            
         <div class="row">
           <div class="col">
             <br><br><br>
             <img src="../images/iot-img3.png" height=240px width=225px />
+            <figcaption>Data graphic</figcaption>
           </div>
 
           <div class="col align-right">
@@ -78,7 +80,7 @@
               <br>
               <p>The development of the Internet of Things will also improve daily life within our own homes.</p>
               <ul>
-                <li>Automatic thermostats can regulate temperature and save money/energy/</li>
+                <li>Automatic thermostats can regulate temperature and save money/energy</li>
                 <li>Better security can be offered by continuous surveillance and alerting authorities when necessary.</li>
                 <li>Reminders of mundane tasks that are likely to be forgotten can be given based on personal calenders.</li>
               </ul> 
@@ -87,6 +89,7 @@
             <div class="col">
               <br><br>
               <img src="../images/iot-img2.png" height=204px width=288px />
+              <figcaption>The smart home</figcaption>
               <br><br>
             </div>
   
