No longer using figure-caption class
Ensures consistency with others

--- a/pages/web.html
+++ b/pages/web.html
@@ -70,7 +70,7 @@
         <div class = "container text-center">
             <figure class = "figure">
                 <img src="../images/90sweb.jpg" class="img-fluid">
-                <figcaption class="figure-caption">The 90s did see some questionable design choices on the web.</figcaption>
+                <figcaption>The 90s did see some questionable design choices on the web.</figcaption>
             </figure>
         </div>
         
